Fixed #18789 - Fixed some text wrap issues with methods in the docs.
Thanks neixetis@ for the report.

--- a/docs/_theme/djangodocs/static/djangodocs.css
+++ b/docs/_theme/djangodocs/static/djangodocs.css
@@ -90,8 +90,8 @@ table.docutils thead th p { margin: 0; padding: 0; }
 table.docutils { border-collapse:collapse; }
 
 /*** code blocks ***/
-.literal { white-space:nowrap; }
-.literal { color:#234f32; }
+.literal { color:#234f32; white-space:nowrap; }
+dt > tt.literal { white-space: normal; }
 #sidebar .literal { color:white; background:transparent; font-size:11px; }
 h4 .literal { color: #234f32; font-size: 13px; }
 pre { font-size:small; background:#E0FFB8; border:1px solid #94da3a; border-width:1px 0; margin: 1em 0; padding: .3em .4em; overflow: hidden; line-height: 1.3em;}
